feat: hook up cef for rendering of webpages

--- a/crates/switchboard-app/Cargo.toml
+++ b/crates/switchboard-app/Cargo.toml
@@ -7,3 +7,4 @@ authors.workspace = true
 
 [dependencies]
 switchboard-core = { path = "../switchboard-core" }
+switchboard-cef-sys = { path = "../switchboard-cef-sys" }
